--- a/static/css/main.css
+++ b/static/css/main.css
@@ -346,3 +346,12 @@ body {
 .photo .title {
     margin-bottom: 1rem;
 }
+
+.title a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.title a:hover {
+    text-decoration: underline;
+}
