--- a/public/views/index.html
+++ b/public/views/index.html
@@ -71,8 +71,13 @@
                     <a href="/g?s={{.Src}}"><img src="/p?s={{.Src}}" title="{{.Name}}"/></a>
                     <p class="title"><a href="/f?s={{.Src}}">{{.Name}}</a></p>
                 {{else}}
-                    <a href="/f?s={{.Src}}"><img src="/f?s={{.Src}}" title="{{.Name}}"/></a>
-                    <p class="title"><a href="/f?s={{.Src}}">{{.Name}}</a></p>
+                    {{if .IsVideo}}
+                        <a href="/v?s={{.Src}}"><img src="/f?s={{.VideoPreview}}" title="{{.Name}}"/></a>
+                        <p class="title"><a href="/f?s={{.Src}}">{{.Name}}</a></p>
+                    {{else}}
+                        <a href="/f?s={{.Src}}"><img src="/f?s={{.Src}}" title="{{.Name}}"/></a>
+                        <p class="title"><a href="/f?s={{.Src}}">{{.Name}}</a></p>
+                    {{end}}
                 {{end}}
             </div>
         {{end}}
