--- a/public/views/index.html
+++ b/public/views/index.html
@@ -68,14 +68,14 @@
         {{else}}
             <div class="photo">
                 {{if .SupportedFormat}}
-                    <a href="/g?s={{.Src}}"><img src="/p?s={{.Src}}" title="{{.Name}}"/></a>
+                    <a href="/g?s={{.Src}}" rel="0"><img src="/p?s={{.Src}}" title="{{.Name}}"/></a>
                     <p class="title"><a href="/f?s={{.Src}}">{{.Name}}</a></p>
                 {{else}}
                     {{if .IsVideo}}
                         <a href="/v?s={{.Src}}"><img src="/f?s={{.VideoPreview}}" title="{{.Name}}"/></a>
                         <p class="title"><a href="/f?s={{.Src}}">{{.Name}}</a></p>
                     {{else}}
-                        <a href="/f?s={{.Src}}"><img src="/f?s={{.Src}}" title="{{.Name}}"/></a>
+                        <a href="/f?s={{.Src}}" rel="0"><img src="/f?s={{.Src}}" title="{{.Name}}"/></a>
                         <p class="title"><a href="/f?s={{.Src}}">{{.Name}}</a></p>
                     {{end}}
                 {{end}}
@@ -99,6 +99,9 @@
 
     <a href="/?p={{.NextPage}}&s={{$path}}">&rightarrow;</a>
 </p>
+
+
+<script src="/js/0.min.js"></script>
 
 </body>
 
