--- a/public/views/index.html
+++ b/public/views/index.html
@@ -33,10 +33,8 @@
 
 {{$path := .Path}}
 
-<p>
-    {{range .BreadCrumbs}}
-        / <a href="/?s={{.Path}}">{{.Title}}</a>
-    {{end}}
+<p class="breadcrumbs">
+    {{range .BreadCrumbs}}/<a href="/?s={{.Path}}">{{.Title}}</a>{{end}}
 </p>
 
 <p>
@@ -54,7 +52,7 @@
     <a href="/?p={{.NextPage}}&amp;s={{$path}}">&rightarrow;</a>
 </p>
 
-<section class="photos">
+<section id="photos" class="photos">
     {{range .Photos}}
         {{if .Directory}}
             <div class="dir">
@@ -71,15 +69,25 @@
             <div class="photo">
                 {{if .SupportedFormat}}
                     {{/* RAW */}}
-                    <a href="/g?s={{.Src}}" rel="0" class="jsp" data-caption="{{.Name}}" data-id="{{.Name}}" data-group="0" ><img src="/p?s={{.Src}}" title="{{.Name}}"/></a>
+                    <a href="/g?s={{.Src}}" class="jsp"><img src="/p?s={{.Src}}"
+                                                             title="{{.Name}}"
+                                                             data-caption="{{.Name}}"
+                                                             data-bp="/g?s={{.Src}}"/></a>
                     <p class="title"><a href="/f?s={{.Src}}">{{.Name}}</a></p>
                 {{else}}
                     {{if .IsVideo}}
-                        <a href="/v?s={{.Src}}"><img src="/f?s={{.VideoPreview}}" title="{{.Name}}" /></a>
+                        {{/* MP4 / WEBM / OGG */}}
+                        <a href="/v?s={{.Src}}.mp4" class="jsp video"><img src="/f?s={{.VideoPreview}}"
+                                                                           title="{{.Name}}"
+                                                                           data-caption="{{.Name}}"
+                                                                           data-bp="/v?s={{.Src}}.mp4"/></a>
                         <p class="title"><a href="/f?s={{.Src}}">{{.Name}}</a></p>
                     {{else}}
                         {{/* JPEG / PNG / GIF / SVG / etc */}}
-                        <a href="/f?s={{.Src}}" rel="0"  class="jsp" data-caption="{{.Name}}" data-id="{{.Name}}" data-group="0"><img src="/f?s={{.Src}}" title="{{.Name}}" /></a>
+                        <a href="/f?s={{.Src}}" class="jsp"><img src="/f?s={{.Src}}"
+                                                                 title="{{.Name}}"
+                                                                 data-caption="{{.Name}}"
+                                                                 data-bp="/f?s={{.Src}}"/></a>
                         <p class="title"><a href="/f?s={{.Src}}">{{.Name}}</a></p>
                     {{end}}
                 {{end}}
@@ -106,15 +114,21 @@
 
 
 {{/*<script src="/js/0.min.js"></script>*/}}
+
 {{/* https://github.com/appleple/SmartPhoto */}}
-<script src="/js/smartphoto.min.js"></script>
-<script>
-    document.addEventListener('DOMContentLoaded',function(){
-        new SmartPhoto(".jsp",{
-            // resizeStyle: 'fit' // 'fill'
-        });
-    });
-</script>
+{{/*<script src="/js/smartphoto.min.js"></script>*/}}
+{{/*<script>*/}}
+{{/*document.addEventListener('DOMContentLoaded',function(){*/}}
+{{/*new SmartPhoto(".jsp",{*/}}
+{{/*// resizeStyle: 'fit' // 'fill'*/}}
+{{/*});*/}}
+{{/*});*/}}
+{{/*</script>*/}}
+
+
+<script src="/js/BigPicture.min.js"></script>
+<script src="/js/app.js"></script>
+
 </body>
 
 </html>{{end}}
