support for more raw formats, minor ui fixes, some refactoring

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -317,10 +317,12 @@ header a {
 }
 
 .photos {
-
     color: #fff;
     display: flex;
     flex-wrap: wrap;
+
+    align-items: center;
+    justify-content: center;
 }
 
 .photo,
