--- a/public/views/index.html
+++ b/public/views/index.html
@@ -38,18 +38,18 @@
 </p>
 
 <p>
-    <a href="/?p={{.PrevPage}}&amp;s={{$path}}">&leftarrow;</a>
+    <a href="/?s={{$path}}&amp;p={{.PrevPage}}">&leftarrow;</a>
 
     {{range .Pages}}
         {{if .Current}}
             <span>{{.Num}}</span>
         {{else}}
-            <a href="/?p={{.Num}}&amp;s={{$path}}">{{.Num}}</a>
+            <a href="/?s={{$path}}&amp;p={{.Num}}">{{.Num}}</a>
         {{end}}
     {{end}}
 
 
-    <a href="/?p={{.NextPage}}&amp;s={{$path}}">&rightarrow;</a>
+    <a href="/?s={{$path}}&amp;p={{.NextPage}}">&rightarrow;</a>
 </p>
 
 <section id="photos" class="photos">
@@ -97,19 +97,26 @@
 </section>
 
 
+<div class="page-load-status">
+    <p class="infinite-scroll-request">Loading...</p>
+    <p class="infinite-scroll-last">End of content</p>
+    <p class="infinite-scroll-error">Error or no more pages to load</p>
+</div>
+
+
 <p>
-    <a href="/?p={{.PrevPage}}&amp;s={{$path}}">&leftarrow;</a>
+    <a href="/?s={{$path}}&amp;p={{.PrevPage}}">&leftarrow;</a>
 
     {{range .Pages}}
         {{if .Current}}
             <span>{{.Num}}</span>
         {{else}}
-            <a href="/?p={{.Num}}&amp;s={{$path}}">{{.Num}}</a>
+            <a href="/?s={{$path}}&amp;p={{.Num}}">{{.Num}}</a>
         {{end}}
     {{end}}
 
 
-    <a class="next-page" href="/?p={{.NextPage}}&amp;s={{$path}}">&rightarrow;</a>
+    <a class="next-page" href="/?s={{$path}}&amp;p={{.NextPage}}">&rightarrow;</a>
 </p>
 
 
