basic video thumbnail from ffmpeg

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -80,7 +80,7 @@
                 {{else}}
                     {{if .IsVideo}}
                         {{/* MP4 / WEBM / OGG */}}
-                        <a href="/v?s={{.Src}}.mp4" class="jsp video"><img src="/f?s={{.VideoPreview}}"
+                        <a href="/v?s={{.Src}}.mp4" class="jsp video"><img src="/vp?s={{.VideoPreview}}"
                                                                            title="{{.Name}}"
                                                                            data-caption="{{.Name}}"
                                                                            data-bp="/v?s={{.Src}}.mp4"/></a>
