basic burst shots - some ui experimets WIP

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -101,8 +101,8 @@
                     </div>
                 {{end}}
             {{end}}
-            <div class="shot-start">{{.StartedAt}}</div>
-            <div class="shot-end">{{.FinishedAt}}</div>
+{{/*            <div class="shot-start">{{.StartedAt}}</div>*/}}
+{{/*            <div class="shot-end">{{.FinishedAt}}</div>*/}}
         </div>
     {{end}}
 </section>
